# Todo-App

./: .dockerignore  .gitignore  Dockerfile  READE.md  README.md  alembic.ini  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 25cff2077e84_added_new_columns_for_subtasks_and_.py  37cb293586fc_add_description_column.py  61d0cd2f3906_.py  8f2a9d1c4b7e_add_parent_id_to_todos.py  b9f3a1d2c4e6_add_todo_context_tags_table.py
app/: main.py
app/api/: auth.py  deps.py  todos.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: context_tag.py  todo.py  user.py
app/schemas/: todo.py  user.py
app/services/: todo_service.py  user_service.py
docker/: entrypoint.sh
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_auth_and_deps.py  test_main_app.py  test_security.py  test_todo_service.py  test_todos_api.py  test_user_service.py
